force-app/main/default/objects/Lead/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is the account associated with this lead. If it already exists, select it. If not, DO NOT create a new account. You will create the account when you win the Opportunity.</description>
    <inlineHelpText>This is the account associated with this lead. If it already exists, select it. If not, DO NOT create a new account. You will create the account when you win the Opportunity.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>