force-app/main/default/objects/Lead/fields/Estimated_Assets__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Assets__c</fullName>
    <description>Estimated assets of the company in Billions of Dollars.</description>
    <label>Estimated Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>