force-app/main/default/objects/Lead/fields/Lead_Originator__c.field-meta.xml
<CustomField>
    <fullName>Lead_Originator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the RICHEY MAY EMPLOYEE who originated the lead - aka the first person to talk to them. This is likely to be the same as lead owner, but doesn&apos;t have to be.</description>
    <inlineHelpText>This is the RICHEY MAY EMPLOYEE who originated the lead - aka the first person to talk to them. This is likely to be the same as lead owner, but doesn&apos;t have to be.</inlineHelpText>
    <label>Lead Originator</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <value>0015e00000DSOybAAH</value>
        </filterItems>
        <infoMessage>Search RM Employees</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Lead Originator)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>