force-app/main/default/objects/Lead/fields/Lead_Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Lead_Referred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the person outside of Richey May that referred this lead to you. This is used for relationship reporting and is an optional field. If this lead was referred by someone inside Richey May, use the Lead Originator field.</description>
    <inlineHelpText>This is the person outside of Richey May that referred this lead to you. This is used for relationship reporting and is an optional field. If this lead was referred by someone inside Richey May, use the Lead Originator field.</inlineHelpText>
    <label>Lead Referred By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>