force-app/main/default/objects/Lead/fields/MS_Dyn_Lead_Created_DateTime__c.field-meta.xml
<CustomField>
    <fullName>MS_Dyn_Lead_Created_DateTime__c</fullName>
    <label>MS Dyn Lead Created DateTime</label>
    <type>DateTime</type>
</CustomField>