force-app/main/default/objects/Lead/fields/MS_Dyn_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>MS_Dyn_Lead_ID__c</fullName>
    <description>Microsoft dynamics legacy lead ID</description>
    <label>MS Dyn Lead ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>