force-app/main/default/objects/Lead/fields/MS_Dyn_Lead_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>MS_Dyn_Lead_Owner_ID__c</fullName>
    <label>MS Dyn Lead Owner ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>