force-app/main/default/objects/Lead/fields/MS_Dyn_Lead_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>MS_Dyn_Lead_Owner_Name__c</fullName>
    <description>Lead owner from MS dynamics</description>
    <label>MS Dyn Lead Owner Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>