force-app/main/default/objects/Lead/fields/Product_Service_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Service_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Product or Service this lead is interested in. This helps us guide marketing campaigns. You will be able to add multiple Products in the Opportunity stage.</description>
    <inlineHelpText>This is the Product or Service this lead is interested in. This helps us guide marketing campaigns. You will be able to add multiple Products in the Opportunity stage.</inlineHelpText>
    <label>Product/Service Interest</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>