force-app/main/default/objects/Lead/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>This is the role the person serves, not necessarily what their title states. This helps us refine marketing campaigns and sales efforts better where titles may be unique. If you&apos;re not sure what to put, each out to your Salesforce Admin.</description>
    <inlineHelpText>This is the role the person serves, not necessarily what their title states. This helps us refine marketing campaigns and sales efforts better where titles may be unique. If you&apos;re not sure what to put, each out to your Salesforce Admin.</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role</valueSetName>
    </valueSet>
</CustomField>