force-app/main/default/objects/Lead/fields/SubSegment__c.field-meta.xml
<CustomField>
    <fullName>SubSegment__c</fullName>
    <description>This is a subtype that helps refine our targeting for marketing and reports in addition to the segment. Your options will vary depending on what you select for Segment.</description>
    <inlineHelpText>This is a subtype that helps refine our targeting for marketing and reports in addition to the segment. Your options will vary depending on what you select for Segment.</inlineHelpText>
    <label>SubSegment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SubSegment</valueSetName>
    </valueSet>
</CustomField>