force-app/main/default/objects/Lead/listViews/My_Leads.listView-meta.xml
<ListView>
    <fullName>My_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Segment__c</field>
        <operation>equals</operation>
        <value>Alternative Investments,Mortgage Bank,Bank,Credit Union,Media &amp; Entertainment,Other</value>
    </filters>
    <label>My Leads</label>
</ListView>